# lilygo-t4s3-rs

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
examples/: benchy.rs  benchy_touch.rs  teapot.rs  touch.rs
src/: cst226.rs  lib.rs  main.rs  rm690b0.rs
