[package]
name = "lilygo-t4s3"
version = "0.1.0"
authors = ["Billy Lindeman <billylindeman@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["dma"]
dma = []

[dependencies]
anyhow = { version = "1.0.86", default-features = false }
embedded-graphics = "0.7"
embedded-hal = "1.0.0"
embedded-term = { path = "../embedded-term", features = ["log"] }
esp-alloc = "0.4.0"
esp-backtrace = { version = "0.12.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.18.0", features = [ 
    "esp32s3",
    "opsram-16m",
    #"psram-80mhz",
] }
esp-println = { version = "0.9.1", features = ["esp32s3", "log"] }
log = "0.4.21"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
embedded-plots = "0.2.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
